# varphi-python-dap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yml
src/varphi_python_dap/: __init__.py  cli.py  compiler.py
src/varphi_python_dap/lib/: __init__.py  debugger.py
